[package]
name = "shazoom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
easyfft = "0.4.1"
env_logger = "0.11.1"
log = "0.4.20"
rayon = "1.8.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
